--- a/ODK.Web.Razor/Views/Shared/Home/_HomeContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Home/_HomeContent.cshtml
@@ -33,9 +33,7 @@
     {
         Content = 
             @<div>
-                <p>
-                    @HomePageResources.NoBloatedFeatures
-                </p>
+                <p>@HomePageResources.NoBloatedFeatures</p>
                 <ul class="list-group list-group-flush mb-3">
                     <li class="list-group-item">@HomePageResources.CreateAndManageGroups</li>
                     <li class="list-group-item">@HomePageResources.ScheduleEvents</li>
@@ -54,18 +52,14 @@
     {
         Content = 
             @<div>
-                <div>
-                    @HomePageResources.YouControl:
-                </div>
+                <div>@HomePageResources.YouControl:</div>
                 <ul class="list-group list-group-flush mb-3">
                     <li class="list-group-item">@HomePageResources.WhoCanSeeEvents</li>
                     <li class="list-group-item">@HomePageResources.WhoCanRespond</li>
                     <li class="list-group-item">@HomePageResources.WhoCanSeeVenues</li>
                     <li class="list-group-item">@HomePageResources.HowMembersInteract</li>
                 </ul>
-                <p>
-                    @HomePageResources.YouDecideHowYourGroupRuns
-                </p>
+                <p>@HomePageResources.YouDecideHowYourGroupRuns</p>
             </div>,
         Hero = true,
         Theme = themes[i++ % 2],
@@ -76,12 +70,8 @@
     {
         Content = 
             @<div>
-                <p>
-                    @HomePageResources.SwitchingPlatformsShouldntMeanStartingOver
-                </p>
-                <div>
-                    @HomePageResources.WeSupport:
-                </div>
+                <p>@HomePageResources.SwitchingPlatformsShouldntMeanStartingOver</p>
+                <div>@HomePageResources.WeSupport:</div>
                 <ul class="list-group list-group-flush mb-3">
                     <li class="list-group-item">@HomePageResources.FamiliarGroupAndEventStructures</li>
                     <li class="list-group-item">@HomePageResources.SimpleOnboardingForExistingMembers</li>
@@ -101,12 +91,8 @@
     {
         Content = 
             @<div>
-                <p>
-                    @HomePageResources.CommunitiesGrowBestWhenOrganisersArentStressedAboutMonthlyBills
-                </p>
-                <p>
-                    @HomePageResources.OurGoalIsSimple
-                </p>                
+                @*<p>@HomePageResources.CommunitiesGrowBestWhenOrganisersArentStressedAboutMonthlyBills</p>*@
+                <p>@HomePageResources.OurGoalIsSimple</p>
             </div>,
         Hero = true,
         Theme = themes[i++ % 2],
