--- a/ODK.Web.Razor/Views/Shared/Components/_BodyWithSidebar.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_BodyWithSidebar.cshtml
@@ -4,7 +4,7 @@
 @using ODK.Web.Razor.Pages.Chapters
 @model ODK.Web.Razor.Models.Components.BodyWithSidebarViewModel
 
-<main class="@Model.Class">
+<main id="main" class="@Model.Class">
     @await Html.PartialAsync("Components/_PageTitle", new PageTitleViewModel
     {
         Content = Model.TitleContent,
