--- a/ODK.Web.Razor/Views/Shared/Home/_HomeContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Home/_HomeContent.cshtml
@@ -8,7 +8,7 @@
     var themes = new[] { SectionThemeType.Dark, SectionThemeType.Light };
     var i = 0;
 }
-<main>
+<main id="main">
     @await Html.PartialAsync("Components/_Section", new SectionViewModel
     {
         Content = 
