--- a/ODK.Web.Razor/Views/Shared/Home/_OdkHomeContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Home/_OdkHomeContent.cshtml
@@ -17,7 +17,7 @@
         .ToArray();
 }
 
-<main>
+<main id="main">
     @await Html.PartialAsync("Home/_ChaptersSection", new ChaptersSectionViewModel
     {
         Chapters = chapters,
