--- a/ODK.Web.Razor/wwwroot/css/_buttons.scss
+++ b/ODK.Web.Razor/wwwroot/css/_buttons.scss
@@ -9,9 +9,11 @@
     padding: 0;
 }
 
-.accordion .btn-link {
-    padding: 0;
-    text-align: left;
+.accordion {
+    .btn-link {
+        padding: 0;
+        text-align: left;
+    }
 }
 
 .btn-overlay {
