--- a/ODK.Web.Razor/wwwroot/css/build.scss
+++ b/ODK.Web.Razor/wwwroot/css/build.scss
@@ -34,6 +34,7 @@
 @import "_modal";
 @import "_navbar";
 @import "_notifications";
+@import "_offcanvas";
 @import "_overlay";
 @import "_panels";
 @import "_paragraphs";
