--- a/ODK.Web.Razor/Views/Shared/Components/_Icon.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_Icon.cshtml
@@ -26,6 +26,8 @@
         <i class="@Model.Class fa-solid fa-circle-check"></i>break;
     case IconType.ChevronRight:
         <i class="@Model.Class fa-solid fa-chevron-right"></i>break;    
+    case IconType.CircleNotch:
+        <i class="@Model.Class fa-solid fa-circle-notch fa-spin"></i>break;
     case IconType.Contact:
         <i class="@Model.Class fa-regular fa-envelope"></i>break;
     case IconType.Copy:
