--- a/ODK.Web.Razor/Views/Shared/Notifications/_NotificationListItem.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Notifications/_NotificationListItem.cshtml
@@ -7,7 +7,7 @@
 @model NotificationListItemViewModel
 @inject IOdkRoutes OdkRoutes
 @{
-    var (notification, platform) = (Model.Notification, Model.Platform);
+    var notification = Model.Notification;
 
     var title = notification.Type switch
     {
@@ -18,6 +18,16 @@
         NotificationType.NewEvent => "New event",
         NotificationType.NewMember => "New member",
         _ => null
+    };
+
+    var group = notification.Type.Group();
+
+    var iconType = group switch
+    {
+        NotificationGroupType.Events => IconType.Calendar,
+        NotificationGroupType.Members => IconType.User,
+        NotificationGroupType.Messages => IconType.Envelope,
+        _ => default(IconType?)
     };
 
     var path = notification.Type switch
@@ -54,6 +64,12 @@
 <div>
     <div class="notification-row notification-header">
         <div class="notification-col">
+            @if (iconType != null)
+            {
+                <span class="icon-wrapper">
+                    @await Html.PartialAsync("Components/_Icon", new IconViewModel(iconType.Value))
+                </span>
+            }
             <strong class="notification-title">@title</strong>
         </div>
         <div class="notification-col-icon">
