--- a/ODK.Web.Razor/wwwroot/css/_notifications.scss
+++ b/ODK.Web.Razor/wwwroot/css/_notifications.scss
@@ -1,13 +1,24 @@
-﻿.notification-item {
-    --odk-notification-item-padding-y: 1rem;
-    --odk-notification-item-padding-x: var(--bs-dropdown-item-padding-x);
+﻿.notification-items {
+    max-height: 80dvh;
+    overflow-y: auto;
+    overscroll-behavior: contain;
+}
 
+.offcanvas--notifications {
+    --bs-offcanvas-width: 500px;
+
+    .offcanvas-body {
+        // move padding into the notification items so that the link highlights are flush
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
+
+.notification-item {
+    --odk-notification-item-padding-y: 1rem;
+    --odk-notification-item-padding-x: 1rem;
     padding: 0;
     cursor: default;
-
-    &:hover {
-        background-color: var(--odk-bg-level-1) !important;
-    }
 
     .notification-row {
         display: flex;
@@ -48,10 +59,10 @@
 
     .notification-header {
         margin-top: var(--odk-notification-item-padding-y);
+        padding-left: var(--bs-offcanvas-padding-x);
     }
 
     .notification-title {
-        padding-left: var(--odk-notification-item-padding-x);
         margin-right: 0.5rem;
     }
 
@@ -70,9 +81,5 @@
                 margin-bottom: 0;
             }
         }
-    }
-
-    .notification-placeholder {
-        padding: var(--odk-notification-item-padding-y) var(--odk-notification-item-padding-x);
     }
 }
