(account menu): switch to offcanvas

--- a/ODK.Web.Razor/Views/Shared/Components/_Icon.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_Icon.cshtml
@@ -20,6 +20,8 @@
         <i class="@Model.Class fa-regular fa-bell"></i>break;
     case IconType.Calendar:
         <i class="@Model.Class fa-regular fa-calendar"></i>break;
+    case IconType.CalendarPlus:
+        <i class="@Model.Class fa-regular fa-calendar-plus"></i>break;
     case IconType.Check:
         <i class="@Model.Class fa-solid fa-check"></i>break;
     case IconType.CheckCircle:
