--- a/ODK.Web.Razor/Views/Shared/Header/_AccountDropdown.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_AccountDropdown.cshtml
@@ -25,6 +25,7 @@
         .GroupBy(x => x.Id)
         .ToDictionary(x => x.Key, x => x.First())
         .Values
+        .Where(x => x.Approved())
         .OrderBy(x => x.GetDisplayName(platform))
         .ToArray();
 
@@ -32,121 +33,175 @@
 
 @if (Model.MemberChapters.Count > 0)
 {
-    <div class="account-links" role="button">
-        <div class="dropdown">
-            <div class="text-light account-links__user dropdown-toggle" data-bs-toggle="dropdown">
-                @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.User))
-            </div>
-            <div class="dropdown-menu dropdown-menu-end text-end">
-                @if (chapters.Length == 1)
-                {
-                    var chapter = chapters.First();
-                    adminChapterDictionary.TryGetValue(chapter.Id, out var adminChapter);
-                    memberChapterDictionary.TryGetValue(chapter.Id, out var memberChapter);                    
+    <div class="text-light account-links__user" role="button"
+        data-bs-toggle="offcanvas" data-bs-target="#account-menu-offcanvas">
+        @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.User))
+    </div>
 
-                    @if (memberChapter != null)
+    <div class="d-none" data-attach-to="main">
+        @await Html.PartialAsync("Components/_Offcanvas", new OffcanvasViewModel
+        {
+            BodyClass = "pt-0",
+            Class = "offcanvas-flush",
+            Id = "account-menu-offcanvas",
+            Position = "end",
+            ContentFunc = 
+                @<div>
+                    @if (chapters.Length == 1)
                     {
-                        <a class="dropdown-item" href="@OdkRoutes.Account.Index(chapter)">
-                            My profile
-                        </a>                        
-                    }
-                    
-                    <a class="dropdown-item" href="@OdkRoutes.Groups.Group(chapter)">
-                        @chapter.GetDisplayName(platform)
-                    </a>
-
-                    <a class="dropdown-item" href="@OdkRoutes.Account.Logout(chapter)">
-                        Sign Out
-                    </a>
-                    
-                    @if (adminChapter != null)
-                    {
-                        <div class="dropdown-divider"></div>
-                        @await Html.PartialAsync("Admin/_AdminLink", new AdminLinkViewModel
-                        {
-                            Class = "dropdown-item",
-                            Route = OdkRoutes.GroupAdmin.Home(adminChapter),
-                            Text = $"{chapter.GetDisplayName(platform)} Admin"
-                        })
-                        @await Html.PartialAsync("Admin/_AdminLink", new AdminLinkViewModel
-                        {
-                            Class = "dropdown-item",
-                            Route = OdkRoutes.GroupAdmin.EventCreate(adminChapter),
-                            Text = "Create event"
-                        })
-                    }
-                }
-                else if (chapters.Length > 1)
-                {
-                    foreach (var chapter in chapters)
-                    {
+                        var chapter = chapters.First();
                         adminChapterDictionary.TryGetValue(chapter.Id, out var adminChapter);
-                        memberChapterDictionary.TryGetValue(chapter.Id, out var memberChapter);
-
-                        <div class="dropdown dropstart">
-                            <div class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown">
-                                @chapter.GetDisplayName(platform)
-                            </div>
-                            <div class="dropdown-menu text-end">
-                                <a class="dropdown-item" href="@OdkRoutes.Groups.Group(chapter)">
-                                    Home
+                        memberChapterDictionary.TryGetValue(chapter.Id, out var memberChapter);                                       
+                                
+                        <div class="list-group list-group-flush list-group-border-0">
+                            @if (memberChapter != null)
+                            {
+                                <a class="list-group-item list-group-item-action" href="@OdkRoutes.Account.Index(chapter)">
+                                    <span class="icon">
+                                        @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.UserOutline))
+                                    </span>
+                                    <span>My profile</span>
                                 </a>
+                            }
 
-                                @if (memberChapter != null)
+                            <a class="list-group-item list-group-item-action" href="@OdkRoutes.Groups.Group(chapter)">
+                                <span class="icon">
+                                    @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.Home))
+                                </span>
+                                <span>@chapter.GetDisplayName(platform)</span>
+                            </a>                                    
+                        </div>
+                            
+                        @if (adminChapter != null)
+                        {
+                            <hr/>
+
+                            <div class="list-group list-group-flush list-group-border-0">
+                                @await Html.PartialAsync("Admin/_AdminLink", new AdminLinkViewModel
                                 {
-                                    <a class="dropdown-item" href="@OdkRoutes.Account.Index(memberChapter)">
-                                        My profile
-                                    </a>
-                                }                                
-
-                                @if (adminChapter != null || Model.Member?.SiteAdmin == true)
+                                    Icon = IconType.Wrench,
+                                    Class = "list-group-item list-group-item-action",
+                                    Route = OdkRoutes.GroupAdmin.Home(adminChapter),
+                                    Text = $"{chapter.GetDisplayName(platform)} Admin"
+                                })
+                                @await Html.PartialAsync("Admin/_AdminLink", new AdminLinkViewModel
                                 {
-                                    <div class="dropdown-divider"></div>
-                                    @await Html.PartialAsync("Admin/_AdminLink", new AdminLinkViewModel
-                                    {
-                                        Class = "dropdown-item",
-                                        Route = OdkRoutes.GroupAdmin.Home(chapter),
-                                        Text = "Admin"
-                                    })
-                                    @await Html.PartialAsync("Admin/_AdminLink", new AdminLinkViewModel
-                                    {
-                                        Class = "dropdown-item",
-                                        Route = OdkRoutes.GroupAdmin.EventCreate(chapter),
-                                        Text = "Create event"
-                                    })
-
-                                    if (Model.Member?.SiteAdmin == true)
-                                    {
-                                        @await Html.PartialAsync("Admin/_AdminLink", new AdminLinkViewModel
-                                        {
-                                            Class = "dropdown-item",
-                                            Route = OdkRoutes.GroupAdmin.SiteAdmin(chapter),
-                                            Text = "Site admin"
-                                        })
-                                    }
-                                }
-                            </div>                            
-                        </div>                                                                        
+                                    Icon = IconType.CalendarPlus,
+                                    Class = "list-group-item list-group-item-action",
+                                    Route = OdkRoutes.GroupAdmin.EventCreate(adminChapter),
+                                    Text = "Create event"
+                                })                                 
+                            </div>                                    
+                        }
                     }
-
-                    <div class="dropdown-divider"></div>
-
-                    @if (defaultChapter != null)
+                    else if (chapters.Length > 1)
                     {
-                        <a class="dropdown-item" href="@OdkRoutes.Account.Logout(defaultChapter)">Sign Out</a>
-                    }                    
-                }
+                        <div class="accordion accordion--no-theme accordion-flush" id="account-menu-chapters">
+                            @for (var i = 0; i < chapters.Length; i++)
+                            {
+                                var chapter = chapters[i];
+                                adminChapterDictionary.TryGetValue(chapter.Id, out var adminChapter);
+                                memberChapterDictionary.TryGetValue(chapter.Id, out var memberChapter);
+                                    
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button class="accordion-button collapsed" type="button" 
+                                            data-bs-toggle="collapse" data-bs-target="#account-menu-chapter-@i">
+                                            @chapter.GetDisplayName(platform)
+                                        </button>
+                                    </h2>
+                                    <div id="account-menu-chapter-@i" class="accordion-collapse collapse" data-bs-parent="#account-menu-chapters">
+                                        <div class="accordion-body">
+                                            <div class="list-group list-group-flush list-group-border-0">
+                                                <a class="list-group-item list-group-item-action" href="@OdkRoutes.Groups.Group(chapter)">
+                                                    @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.Home))
+                                                    <span>Home</span>
+                                                </a>
 
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#" data-theme-selector="dark">Dark mode</a>
-                <a class="dropdown-item" href="#" data-theme-selector="light">Light mode</a>                
+                                                @if (memberChapter != null)
+                                                {
+                                                    <a class="list-group-item list-group-item-action" href="@OdkRoutes.Account.Index(memberChapter)">
+                                                        @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.UserOutline))
+                                                        <span>My profile</span>
+                                                    </a>
+                                                }                                
+
+                                                @if (adminChapter != null || Model.Member?.SiteAdmin == true)
+                                                {
+                                                    <hr/>
+                                                    @await Html.PartialAsync("Admin/_AdminLink", new AdminLinkViewModel
+                                                    {
+                                                        Icon = IconType.Wrench,
+                                                        Class = "list-group-item list-group-item-action",
+                                                        Route = OdkRoutes.GroupAdmin.Home(chapter),
+                                                        Text = "Admin"
+                                                    })
+                                                    @await Html.PartialAsync("Admin/_AdminLink", new AdminLinkViewModel
+                                                    {
+                                                        Icon = IconType.CalendarPlus,
+                                                        Class = "list-group-item list-group-item-action",
+                                                        Route = OdkRoutes.GroupAdmin.EventCreate(chapter),
+                                                        Text = "Create event"
+                                                    })
+
+                                                    if (Model.Member?.SiteAdmin == true)
+                                                    {
+                                                        @await Html.PartialAsync("Admin/_AdminLink", new AdminLinkViewModel
+                                                        {
+                                                            Icon = IconType.Wrench,
+                                                            Class = "list-group-item list-group-item-action",
+                                                            Route = OdkRoutes.GroupAdmin.SiteAdmin(chapter),
+                                                            Text = "Site admin"
+                                                        })
+                                                    }
+                                                }                           
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>                                                                                                                                               
+                            }
+                        </div>
+                    }                            
             
-                @if (Model.Member?.SiteAdmin == true)
-                {                                        
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="@OdkRoutes.SiteAdmin.Index">Site admin</a>
-                }
-            </div>
-        </div>
+                    @*Site admin*@
+                    @if (Model.Member?.SiteAdmin == true)
+                    {                                          
+                        <hr />
+                        <div class="list-group list-group-flush list-group-border-0">
+                            <a class="list-group-item list-group-item-action" href="@OdkRoutes.SiteAdmin.Index">
+                                @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.Wrench))
+                                <span>Site admin</span>                            
+                            </a>
+                        </div>                                
+                    }                            
+
+                    @*Sign out*@
+                    <hr/>
+                    <div class="list-group list-group-flush list-group-border-0">
+                        <a class="list-group-item list-group-item-action" href="@OdkRoutes.Account.Logout(defaultChapter)">
+                            <span class="icon">
+                                @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.Logout))
+                            </span>
+                            <span>Sign Out</span>
+                        </a>
+                    </div> 
+                </div>,
+            FooterFunc = 
+                @<div>
+                    <div class="list-group list-group-flush list-group-border-0">
+                        <div class="offcanvas-flush-item"><strong>Appearance</strong></div>
+
+                        <label class="list-group-item list-group-item-action d-flex align-items-center offcanvas-flush-item">
+                            <span class="me-3">Dark mode</span>
+
+                            <span class="d-flex gap-1">
+                                <span class="form-switch p-0 d-flex align-items-center">
+                                    <input class="form-check-input ms-0 mt-0" type="checkbox" role="switch" data-theme-switch />
+                                </span>                
+                            </span>
+                        </label>
+                    </div>
+                </div>
+        })
     </div>
 }
