--- a/ODK.Web.Razor/wwwroot/css/_lists.scss
+++ b/ODK.Web.Razor/wwwroot/css/_lists.scss
@@ -1,5 +1,11 @@
 .list-item {
     border-bottom: 1px solid #E3E3E3;
-	margin-bottom: 0.5rem;
-	padding-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    padding-top: 0.5rem;
+}
+
+.list-group-border-0 {
+    .list-group-item {
+        border: none;
+    }
 }
