--- a/ODK.Web.Razor/Pages/Shared/_Layout.cshtml
+++ b/ODK.Web.Razor/Pages/Shared/_Layout.cshtml
@@ -98,18 +98,32 @@
 
     @await RenderSectionAsync("meta", required: false)
 
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/apple-touch-icon-152x152-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="180x180" href="/apple-touch-icon-precomposed.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
+    @if (platform == PlatformType.DrunkenKnitwits)
+    {
+        var basePath = "/assets/drunkenknitwits/favicon";
+        <link rel="apple-touch-icon" sizes="60x60" href="@basePath/apple-touch-icon.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="@basePath/apple-touch-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="@basePath/apple-touch-icon-152x152.png">
+        <link rel="apple-touch-icon-precomposed" sizes="120x120" href="@basePath/apple-touch-icon-120x120-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="152x152" href="@basePath/apple-touch-icon-152x152-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="180x180" href="@basePath/apple-touch-icon-precomposed.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="@basePath/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="@basePath/favicon-16x16.png">
+        <link rel="manifest" href="@basePath/site.webmanifest">
+        <link rel="mask-icon" href="@basePath/safari-pinned-tab.svg" color="#5bbad5">
+    }    
+    else
+    {
+        var basePath = "/assets/groupsquirrel/favicon";
+        <link rel="icon" type="image/png" href="@basePath/favicon-96x96.png" sizes="96x96" />
+        <link rel="icon" type="image/svg+xml" href="@basePath/favicon.svg" />
+        <link rel="shortcut icon" href="@basePath/favicon.ico" />
+        <link rel="apple-touch-icon" sizes="180x180" href="@basePath/apple-touch-icon.png" />
+        <meta name="apple-mobile-web-app-title" content="Group Squirrel" />
+        <link rel="manifest" href="@basePath/site.webmanifest" />
+    }
 
+    <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">        
     
     <script src="~/js/odk.bundle.head.js" asp-append-version="true"></script>
