--- a/ODK.Web.Razor/Pages/Account/Location.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Location.cshtml
@@ -7,7 +7,7 @@
 @using ODK.Web.Razor.Models.Account
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Services
-@model ODK.Web.Razor.Pages.Account.LocationModel
+@model LocationModel
 @inject IMemberService MemberService
 @{
     Layout = "_AccountLayout";
