--- a/ODK.Web.Razor/Views/Shared/Account/_LocationForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_LocationForm.cshtml
@@ -6,7 +6,7 @@
     var distanceUnitOptions = Model.DistanceUnitOptions
         .Select(x => new SelectListItem
         {
-            Value = x.Id.ToString(),
+            Value = ((int)x.Type).ToString(),
             Text = x.Name
         })
         .ToArray();
