--- a/ODK.Web.Razor/wwwroot/css/_navbar.scss
+++ b/ODK.Web.Razor/wwwroot/css/_navbar.scss
@@ -10,10 +10,10 @@ $navbar-light-separator: rgba(0, 0, 0, 0.5);
 }
 
 @mixin nav-link-vertical-padding() {
-  .nav-link {
-    padding-top: .1rem;
-    padding-bottom: .1rem;
-  }
+    .nav-link {
+        padding-top: .1rem;
+        padding-bottom: .1rem;
+    }
 }
 
 .navbar {
@@ -43,36 +43,45 @@ $navbar-light-separator: rgba(0, 0, 0, 0.5);
     }
 }
 
-@include media-breakpoint-up(sm) {
-  .navbar-expand-sm {
-    .navbar-nav {       
-      @include nav-link-vertical-padding();
-
-      .nav-link {
-        padding-left: 1rem;
-        padding-right: 1rem;        
-      }      
-    }
-
-    &:not(.navbar-compact) {
-      .navbar-nav {
+.navbar-expand-sm,
+.navbar-expand-md {
+    .navbar-nav {
         .nav-link {
-          @include media-breakpoint-up(md) {
-            padding-left: 1.5rem;
-            padding-right: 1.5rem;
-          }
-        }        
-      }      
+            padding-left: 0.5rem;
+        }
     }
-  }  
+}
+
+@include media-breakpoint-up(sm) {
+    .navbar-expand-sm {
+        .navbar-nav {
+            @include nav-link-vertical-padding();
+
+            .nav-link {
+                padding-left: 1rem;
+                padding-right: 1rem;
+            }
+        }
+
+        &:not(.navbar-compact) {
+            .navbar-nav {
+                .nav-link {
+                    @include media-breakpoint-up(md) {
+                        padding-left: 1.5rem;
+                        padding-right: 1.5rem;
+                    }
+                }
+            }
+        }
+    }
 }
 
 @include media-breakpoint-up(lg) {
-  .navbar-expand-lg {
-    .navbar-nav {
-      @include nav-link-vertical-padding();      
+    .navbar-expand-lg {
+        .navbar-nav {
+            @include nav-link-vertical-padding();
+        }
     }
-  }	
 }
 
 .navbar--home {
@@ -104,6 +113,7 @@ $navbar-light-separator: rgba(0, 0, 0, 0.5);
 
 .navbar--group {
     background-color: var(--odk-bg-level-2);
+
     .navbar-nav {
         display: flex;
         gap: 1rem;
@@ -135,38 +145,38 @@ $navbar-light-separator: rgba(0, 0, 0, 0.5);
     }
 }
 
-.account-links__user {    
-  font-size: 1.6rem;
-  display: flex;
-  opacity: 0.5;  
+.account-links__user {
+    font-size: 1.6rem;
+    display: flex;
+    opacity: 0.5;
 
-  &:after {
-    // hide dropdown caret
-    display: none;
-  }
+    &:after {
+        // hide dropdown caret
+        display: none;
+    }
 
-  &:hover {
-    opacity: 0.7;
-  }
+    &:hover {
+        opacity: 0.7;
+    }
 }
 
 .chapter {
-  @include media-breakpoint-up(sm) {
-    .account-links--right {
-      position: absolute;
-    }
+    @include media-breakpoint-up(sm) {
+        .account-links--right {
+            position: absolute;
+        }
 
-    .account-links__user {
-      font-size: 1.7rem;
+        .account-links__user {
+            font-size: 1.7rem;
+        }
     }
-  }          
 }
 
 .anonymous-links {
     display: flex;
     position: absolute;
     right: $grid-gutter-width / 2;
-    
+
     .anonymous-link {
         padding-top: 0.1rem;
         padding-bottom: 0.1rem;
